--- a/ad_system_springcloud/pom.xml
+++ b/ad_system_springcloud/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ad_eureka</module>
+        <module>ad_gateway</module>
+        <module>ad_system_service</module>
     </modules>
 
     <name>ad_system_springcloud</name>
