--- a/ad_system_springcloud/ad_system_service/pom.xml
+++ b/ad_system_springcloud/ad_system_service/pom.xml
@@ -13,6 +13,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ad_common</module>
+        <module>ad_sponsor</module>
+        <module>ad_sponsor</module>
     </modules>
     <packaging>pom</packaging>
 
